<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mara_arduino_remote_control</name>
  <version>0.0.1</version>
  <description>This package contains a node that converts sensor_msgs/Range to mara actuator msgs /hros_actuation_servomotor_000000000001/goal</description>
  <maintainer email="alaa.alassi@nobleo.nl">Alejandro Hernandez</maintainer>
  <license>Apache License 2.0</license>
  <author>Alaa Alassi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>hrim_actuator_rotaryservo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hrim_actuator_rotaryservo_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>